--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Heroku Static HTML/CSS Deployment Example</h1>
     <p>Updated</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Rem omnis labore vitae possimus in! Eligendi quo sunt, 
+    <hr> incidunt voluptate ullam laborum! Eum nemo dolores vitae molestias cum minus error deleniti!</p>
 </body>
 </html>
