--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Updated</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Rem omnis labore vitae possimus in! Eligendi quo sunt, 
     <hr> incidunt voluptate ullam laborum! Eum nemo dolores vitae molestias cum minus error deleniti!</p>
+    <p>This is <u>Underlined</u> text.</p>
+    <p>New paragraph</p>
 </body>
 </html>
