--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
     <hr> incidunt voluptate ullam laborum! Eum nemo dolores vitae molestias cum minus error deleniti!</p>
     <p>This is <u>Underlined</u> text.</p>
     <p>New paragraph</p>
+    <a href="http://google.com" target="_blank">Google</a>
+    <br>
+    <a href="hobbies.html" target="_blank">Hobby</a>
+    <img src="./Images/1.jpg" alt="KeyBoard" width="100px"  height="100px"   title="My Keyboard">
+    <h1>Images with Hyper Link</h1>
+    <a href="https://indrawn-world.000webhostapp.com/" target="_blank">
+        <img src="https://images.idgesg.net/images/article/2019/05/cso_best_security_software_best_ideas_best_technology_lightbulb_on_horizon_of_circuit_board_landscape_with_abstract_digital_connective_technology_atmosphere_ideas_innovation_creativity_by_peshkov_gettyimages-965785212_3x2_2400x1600-100797318-large.jpg" 
+        alt="Web Image"
+        width="200px"/>
+    </a>
 </body>
 </html>
