--- a/hobbies.html
+++ b/hobbies.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hobbies</title>
 </head>
 <body>
     <h1>My Hobbies</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident possimus molestias deleniti sunt error deserunt cum 
+        ex officia molestiae <em>Web</em> ut adipisci distinctio et quia, voluptas tempora. Dolorem libero maiores dignissimos!</p>
 </body>
 </html>
