--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Heroku</title>
 </head>
 <body>
+    <h1> Practice HTML </h1>
     <h1>Heroku Static HTML/CSS Deployment Example</h1>
     <p>Updated</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Rem omnis labore vitae possimus in! Eligendi quo sunt, 
@@ -23,5 +24,28 @@
         alt="Web Image"
         width="200px"/>
     </a>
+    <h1>Menu List</h1>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/tables.html" target="_blank">Tables</a></li>
+    </ul>
+    <h1>Ordered List</h1>
+    <ol>
+      <li>
+        Cricket
+        <ol>
+          <li>Domestic</li>
+          <li>International</li>
+        </ol>
+      </li>
+      <li>Hockey</li>
+    </ol>
+    <h1>Defination List</h1>
+    <dl>
+      <dt>Hockey</dt>
+      <dd>Its a Sports</dd>
+      <dt>Cricket</dt>
+      <dd>I love it</dd>
+    </dl>
 </body>
 </html>
