--- a/index.html
+++ b/index.html
@@ -48,5 +48,25 @@
       <dt>Cricket</dt>
       <dd>I love it</dd>
     </dl>
+    <div>
+        <h1>First Paragraph</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis minima a voluptatum, saepe cupiditate, nam excepturi amet sequi illo repellendus animi nesciunt. Magni velit praesentium deleniti quaerat doloremque vitae quod?</p>
+    </div>
+    <div id="first">
+        <h1>Second Paragraph</h1>
+        <p>Recusandae at adipisci animi reprehenderit perspiciatis? Ut unde quod, molestiae modi cupiditate quia consectetur libero perspiciatis itaque est cumque adipisci tempore inventore rem quo vel minima accusantium officia laborum error!</p>
+    </div>
+    <div>
+        <h1>Third Paragraph</h1>
+        <p>Nobis similique, at sapiente, error, magnam eveniet rem inventore ducimus ipsam vel omnis repudiandae! Vel, totam deleniti magni odit ex libero ratione cupiditate incidunt unde in, fuga sunt placeat architecto!</p>
+    </div>
+    <div>
+        <h1>Fourth Paragraph</h1>
+        <p>Odio, expedita praesentium eligendi labore, iure alias nisi voluptatem ducimus ipsum laborum fuga assumenda optio nostrum? Tempore, incidunt debitis laborum accusamus possimus ipsum. Deserunt quam minus, ipsa sit quos velit.</p>
+    </div>
+    <div>
+        <h5>Fifth Paragraph</h5>
+        <p>Assumenda minima, delectus incidunt nisi ipsam cupiditate. Repudiandae ducimus nulla culpa at id dolorum minima facere architecto fugit magnam nobis saepe omnis fuga, vel veniam iste quod dicta! Minus, tempore.</p>
+    </div>
 </body>
 </html>
