--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Heroku</title>
 </head>
 <body>
+    <div id="stick"> Stick to Top</div>
     <h1> Practice HTML </h1>
     <h1>Heroku Static HTML/CSS Deployment Example</h1>
     <p>Updated</p>
@@ -67,6 +68,64 @@
     <div>
         <h5>Fifth Paragraph</h5>
         <p>Assumenda minima, delectus incidunt nisi ipsam cupiditate. Repudiandae ducimus nulla culpa at id dolorum minima facere architecto fugit magnam nobis saepe omnis fuga, vel veniam iste quod dicta! Minus, tempore.</p>
+    </div>
+    <br>
+    <div id="top">Top Menu</div>
+    <div id="container">
+      <div id="left">
+        <h2>Left Coloumn</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique
+          expedita aspernatur molestias, nam tempora eligendi, suscipit
+          assumenda facere, minima odit laboriosam explicabo ex deleniti ipsam
+          libero! Dolores ad beatae labore!
+        </p>
+      </div>
+      <div id="right">
+        <h2>Right Coloumn</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae neque,
+          sapiente facere adipisci voluptatibus a aperiam earum exercitationem
+          ullam alias nesciunt, doloribus perferendis molestias architecto sint
+          illum fugiat consequatur repudiandae!
+        </p>
+      </div>
+      <div id="content">
+        <h1>Main Content</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis
+          ex omnis nihil ea soluta,
+          <img id="covid" src="./Images/21.jpg" /> consequuntur expedita
+          eius fuga, assumenda adipisci corrupti, necessitatibus quibusdam
+          repellendus error sed maxime porro molestias numquam.
+        </p>
+      </div>
+    </div>
+    <h1 style="clear: both">Some Sample H1</h1>
+    <br>
+    <div id="announcement">
+        <p>This is an announcement.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius sequi ducimus. At, laboriosam quae harum expedita corporis id sapiente impedit ullam quasi, deleniti voluptates dolorem facere eius quas excepturi.</p>
+    </div>
+    <div id="second">
+        <p>Assumenda voluptas adipisci velit aperiam eaque, inventore magnam repellendus tenetur maxime nesciunt illum quisquam obcaecati molestias accusamus, culpa amet omnis? Aperiam, aut deserunt? Excepturi laborum, eligendi at deleniti eius sit.</p>
+    </div>
+    <div id="third">
+        <p>Nostrum sint repudiandae architecto praesentium adipisci repellendus qui, consequatur unde omnis minus reiciendis sit exercitationem ab hic consequuntur mollitia, alias ipsam. Architecto ipsum expedita error. Veritatis totam sapiente porro molestias.</p>
+    </div>
+    <div>
+        <p>Dolor ea dolore temporibus molestiae. Dolorum voluptates fugiat qui quidem. Omnis placeat veritatis harum, ut libero nemo sit amet consequatur repellat! Ipsum omnis praesentium aliquid dicta quibusdam consectetur voluptatem blanditiis!</p>
+    </div>
+    <div>
+        <p>Possimus, error officiis. Modi nesciunt fuga, repudiandae tempora mollitia, vitae recusandae animi natus dolorum quibusdam dolores laudantium sed distinctio, totam incidunt debitis neque inventore laboriosam ducimus cumque. Natus, provident consectetur.</p>
+    </div>
+    <div>
+        <p>Quasi dignissimos voluptatum quam incidunt fugit architecto hic aliquid, magni atque autem maxime odio? Ut saepe aut delectus ipsa! Voluptates corporis saepe unde voluptatibus blanditiis repellendus nemo ipsam minima in?</p>
+    </div>
+    <div>
+        <p>Molestiae laboriosam nihil impedit numquam harum mollitia quae enim libero veritatis autem. Deserunt voluptate accusamus inventore maxime exercitationem sunt, incidunt excepturi obcaecati soluta nisi commodi hic voluptates dicta deleniti necessitatibus!</p>
     </div>
 </body>
 </html>
