--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <div>
         <p>Molestiae laboriosam nihil impedit numquam harum mollitia quae enim libero veritatis autem. Deserunt voluptate accusamus inventore maxime exercitationem sunt, incidunt excepturi obcaecati soluta nisi commodi hic voluptates dicta deleniti necessitatibus!</p>
     </div>
+    <a href="boot.html" target="_blank">Bootstrap Practice</a>
     <h6>The End</h6>
 </body>
 </html>
